fix(ship-sidenav): resolve double scrollbars and lock scroll on mobile

--- a/projects/design-system/src/app/layout/layout.scss
+++ b/projects/design-system/src/app/layout/layout.scss
@@ -5,6 +5,10 @@
   width: 100%;
   display: grid;
   grid-template-columns: p2r(400) 1fr;
+
+  @include breakpoint(-centi) {
+    grid-template-columns: 1fr;
+  }
 }
 
 [sidenav] {
